build.gradle.kts: add initial native image support